--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development:
   host: localhost
   pool: 5
   username: postgres
-  password: pancake
+  password: 
 
 test:
   adapter: postgresql
@@ -14,7 +14,7 @@ test:
   host: localhost
   pool: 5
   username: postgres
-  password: pancake
+  password: 
 
 production:
   adapter: postgresql
@@ -23,4 +23,4 @@ production:
   host: localhost
   pool: 5
   username: postgres
-  password: pancake
+  password: 
