--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,16 @@
-development:
+development: &common
   adapter: postgresql
   encoding: unicode
   database: find_me_development
   host: localhost
   pool: 5
-  username: postgres
-  password: postgres
+  username: adillera
+  password: 123qwe
 
 test:
-  adapter: postgresql
-  encoding: unicode
+  <<: *common
   database: find_me_test
-  host: localhost
-  pool: 5
-  username: postgres
-  password: postgres
 
 production:
-  adapter: postgresql
-  encoding: unicode
+  <<: *common
   database: find_me_production
-  host: localhost
-  pool: 5
-  username: postgres
-  password: postgres
